Добавлено хеширование пароля, tokenService, создание базового пути при регистрации

--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,6 @@ DATABASE=CloudStorage
 DBNAME=postgres
 PASSWORD=Qwerty
 
+# JWT
+ACCESS_SECRET_KEY=Qwerty#15!tAnkTest?/!
+REFRESH_SECRET_KEY=QWETest!#kas?/12
