Добавлен кроппе, вкладка общие в настройках

--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "node-sass": "^7.0.3",
     "pspdfkit": "^2024.1.1",
     "react": "^18.2.0",
+    "react-cropper": "^2.3.3",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
