--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,8 @@
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
+    "minisearch": "^6.3.0",
+    "mongoose": "^8.3.1",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
